# Stack

./: .clang-format  .clang-tidy  CMakeLists.txt  Stack.cpp  Stack.h  Tests.cpp  main.cpp  stack.h  tests.cpp
stack/: CMakeLists.txt  tests.cpp
stack/include/: stack-impl.h  stack.h  stack_impl.h
stack/test/: CMakeLists.txt  tests.cpp
